3650.	[tuning]	Use separate rate limiting queues for refresh and
			notify requests. [RT #30589]

3649.	[cleanup]	Include a comment in .nzf files, giving the name of
			the associated view. [RT #34765]

3648.	[test]		Updated the ATF test framework to version 0.17.
			[RT #25627]

3647.	[bug]		Address a race condition when shutting down a zone.
			[RT #34750]

3646.	[bug]		Journal filename string could be set incorrectly,
			causing garbage in log messages. [RT #34738]

3645.	[protocol]	Use case sensitive compression when responding to
			queries. [RT #34737]

3644.	[protocol]	Check that EDNS subnet client options are well formed.
			[RT #34718]

3641.	[bug]		Handle changes to sig-validity-interval settings
			better. [RT #34625]

3640.	[bug]		ndots was not being checked when searching.  Only
			continue searching on NXDOMAIN responses.  Add the
			ability to specify ndots to nslookup. [RT #34711]

3639.	[bug]		Treat type 65533 (KEYDATA) as opaque except when used
			in a key zone. [RT #34238]

	--- 9.9.4 released ---

3643.	[doc]		Clarify RRL "slip" documentation.

3638.	[cleanup]	Add the ability to handle ENOPROTOOPT in case it is
			encountered. [RT #34668]

	--- 9.9.4rc2 released ---

3637.	[bug]		'allow-query-on' was checking the source address
			rather than the destination address. [RT #34590]

3636.	[bug]		Automatic empty zones now behave better with
			forward only "zones" beneath them. [RT #34583]

3635.	[bug]		Signatures were not being removed from a zone with
			only KSK keys for a algorithm. [RT #34439]

3634.	[func]		Report build-id in rndc status. Report build-id
			when building from a git repository. [RT #20422]

3633.	[cleanup]	Refactor OPT processing in named to make it easier
			to support new EDNS options. [RT #34414]

3632.	[bug]		Signature from newly inactive keys were not being
			removed. [RT #32178]

3631.	[bug]		Remove spurious warning about missing signatures when
			qtype is SIG. [RT #34600]
