@@ -1,3 +1,6 @@
+3651.	[tuning]	Adjust when a master server is deemed unreachable.
+			[RT #27075]
+
 3650.	[tuning]	Use separate rate limiting queues for refresh and
 			notify requests. [RT #30589]
 
